# kinodb

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  benchmark_comparison.py  benchmark_real.py  package-lock.json
.github/workflows/: docs.yml  rust.yml
crates/kinodb-cli/: Cargo.toml
crates/kinodb-cli/src/: cmd_bench.rs  cmd_create_test.rs  cmd_export.rs  cmd_info.rs  cmd_ingest.rs  cmd_merge.rs  cmd_mix.rs  cmd_query.rs  cmd_schema.rs  cmd_validate.rs  main.rs
crates/kinodb-core/: Cargo.toml
crates/kinodb-core/src/: header.rs  index.rs  kql.rs  lib.rs  mixture.rs  prefetch.rs  reader.rs  types.rs  writer.rs
crates/kinodb-ingest/: Cargo.toml
crates/kinodb-ingest/src/: hdf5.rs  lerobot.rs  lib.rs  rlds.rs
crates/kinodb-ingest/tests/: hdf5_roundtrip.rs
crates/kinodb-py/: Cargo.toml  pyproject.toml
crates/kinodb-py/python/kinodb/: __init__.py  remote.py  torch.py
crates/kinodb-py/python/kinodb/libkinodb.dylib.dSYM/Contents/: Info.plist
crates/kinodb-py/python/kinodb/libkinodb.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libkinodb.dylib.yml
crates/kinodb-py/src/: lib.rs
crates/kinodb-serve/: Cargo.toml  build.rs
crates/kinodb-serve/proto/: kinodb.proto
crates/kinodb-serve/src/: main.rs  server.rs
kinodb-docs/: astro.config.mjs  package-lock.json  package.json  setup.sh
kinodb-docs/src/content/docs/: index.mdx
kinodb-docs/src/content/docs/benchmarks/: correctness.md  io.md  training.md
kinodb-docs/src/content/docs/guides/: ingestion.md  installation.md  kql.md  mixtures.md  pytorch.md  quickstart.md  remote.md  why-kinodb.md
kinodb-docs/src/content/docs/reference/: architecture.md  cli.md  file-format.md  python-api.md
kinodb-docs/src/styles/: custom.css
notes/: implementation.txt
