[package]
name = "kinodb-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for kinodb — a trajectory database for robot learning"
license = "MIT"

# The binary is called "kino", not "kinodb-cli"
[[bin]]
name = "kino"
path = "src/main.rs"

[dependencies]
kinodb-core = { path = "../kinodb-core" }
kinodb-ingest = { path = "../kinodb-ingest" }
clap = { version = "4", features = ["derive"] }
