[package]
name = "kinodb-ingest"
version = "0.1.0"
edition = "2021"
description = "Format ingesters for kinodb — reads RLDS, LeRobot, HDF5 into .kdb"
license = "MIT"

[dependencies]
kinodb-core = { path = "../kinodb-core" }
hdf5 = "0.8"
ndarray = "0.15"
parquet = "54"
arrow = { version = "54", features = ["json"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
