[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kinodb"
version = "0.1.0"
description = "A high-performance trajectory database for robot learning"
readme = "../../README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
torch = ["torch>=2.0"]

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "kinodb.kinodb"
